<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="of_key_cannot_be_null">OpenFeintSettings.key cannot be null. Please specify your application\'s product key during construction.</string>
    <string name="of_secret_cannot_be_null">OpenFeintSettings.secret cannot be null. Please specify your application\'s product secret during construction.</string>
    <string name="of_id_cannot_be_null">OpenFeintSettings.id cannot be null. Please specify your application id during construction.</string>
    <string name="of_name_cannot_be_null">OpenFeintSettings.name cannot be null. Please specify your application\'s name during construction.</string>
    <string name="of_unexpected_response_format">Unexpected response format.</string>
    <string name="of_unknown_server_error">Unknown server error.</string>
    <string name="of_null_icon_url">iconUrl is null - make sure to load() this Achievement before calling downloadIcon.</string>
    <string name="of_achievement_unlock_null">Can\'t unlock an achievement with a null resourceID.</string>
    <string name="of_achievement_load_null">Can\'t load an achievement with a null resourceID.</string>
    <string name="of_profile_url_null">profilePictureUrl is null - make sure to load() this User before calling downloadProfilePicture.</string>
    <string name="of_low_memory_profile_pic">Your device may not have enough memory to complete this operation. Restarting may free up enough memory.</string>
    <string name="of_profile_picture_download_failed">Sorry - there was a problem downloading this profile picture. Please try again.</string>
    <string name="of_nodisk">Not enough room on your %1$s. Please free up some disk space and try again.</string>
    <string name="of_operation_not_permitted_due_to_parental_controls">This operation is not permitted due to parental controls being enabled on this device.</string>
    <string name="of_sdcard">sdcard</string>
    <string name="of_device">device</string>
    <string name="of_loading_feint">Loading Feint...</string>
    <string name="of_no">No</string>
    <string name="of_yes">Yes</string>
    <string name="of_ok">OK</string>
    <string name="of_cancel">Cancel</string>
    <string name="of_io_exception_on_download">I/O exception reading download</string>
    <string name="of_cant_compress_blob">Error compressing blob.</string>
    <string name="of_no_blob">Score has no blob to download</string>
    <string name="of_achievement_unlocked">Achievement Unlocked!</string>
    <string name="of_timeout">The request didn\'t complete in time.</string>
    <string name="of_bitmap_decode_error">Error decoding bitmap.</string>
    <string name="of_file_not_found">File not found</string>
    <string name="of_error_parsing_error_message">Error parsing error message.</string>
    <string name="of_server_error_code_format">Server responded with code %1$d</string>
    <string name="of_ioexception_reading_body">IOException reading response body.</string>
    <string name="of_switched_accounts">Switched Accounts</string>
    <string name="of_now_logged_in_as_format">You are now logged as: %1$s</string>
    <string name="of_profile_pic_changed">Your profile picture has been changed.</string>
    <string name="of_crash_report_query">Feint couldn\'t initialize\nWould you like to send a crash report and wait for recovery?</string>
    <string name="of_no_video">Your device doesn\'t support video playback.</string>
    <string name="of_home">Home</string>
    <string name="of_banned_dialog">This user or application has been banned. All Feint functionality is disabled.</string>
    <string name="of_settings">Settings</string>
    <string name="of_exit_feint">Exit Feint</string>
    <string name="of_offline_notification">You are offline.</string>
    <string name="of_offline_notification_line2">Feint requires an active network connection.</string>
    <string name="of_score_submitted_notification">High Score submitted</string>
    <string name="of_malformed_request_error">Your request contains the string // - please check to make sure you didn\'t omit any resourceID.</string>
    <string name="hello">Hello World!</string>
    <string name="app_name">Mutant</string>
    <string name="restoring_transactions">Restoring transactions</string>
    <string name="progress_text">Loading...</string>
    <string name="gift_code">Gift Code</string>
    <string name="submit_gift_code">Send Code</string>
    <string name="gift_fail">Wrong Gift Code</string>
    <string name="gift_success">Gift Code accepted. You get %s coins.</string>
    <string name="visit_page">Visit</string>
    <string name="submit_promo_code">Send Code</string>
    <string name="promo_fail">Wrong Promo Code</string>
    <string name="promo_success">Promo Code accepted. You get %s coins.</string>
    <string name="get_reward_title">Awards</string>
    <string name="gift_code_title">Enter the code and get a prize</string>
    <string name="promo_code_title">Enter the code and get a prize</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite_friends_description">Invite friends and get prize points</string>
    <string name="invite_friends_button">Invite</string>
    <string name="gift_code_title_cap">GIFT CODE</string>
    <string name="gift_code_description">Enter the Gift Code and get prizes for yourself and your friend</string>
    <string name="gift_code_description_full">Look for friends gift codes in Facebook and Twitter</string>
    <string name="promo_code_title_cap">PROMO CODE</string>
    <string name="promo_code">Promo Code</string>
    <string name="promo_code_get_code_text">Get promo codes on the official Facebook page</string>
    <string name="promo_code_description">Enter a promo code and get a prize</string>
    <string name="get_promo_code">Get promo code</string>
    <string name="invite_friends_title_cap">INVITE FRIENDS</string>
    <string name="back_button">Back</string>
    <string name="your_code">Your code:</string>
    <string name="facebook_button">Facebook</string>
    <string name="twitter_button">Twitter</string>
    <string name="share_with_friends_title_cap">SHARE WITH FRIENDS</string>
    <string name="share_with_friends_text">Tell your friends about your achievements!</string>
    <string name="request_progress">Contacting server...</string>
    <string name="gift_code_message_facebook">Enter my gift code and get a prize: %s</string>
    <string name="gift_code_message_twitter">Enter my gift code and get a prize: %s #mutantgame #android</string>
    <string name="newsletter_subscription">Subscribe to mailing list</string>
    <string name="newsletter_subscription_description">Be the first to know about our new games, get promo codes, read reviews, and much more. Subscribe to the Alawar mailing list right now!</string>
    <string name="newsletter_subscription_button">Subscribe</string>
    <string name="more_games">More Games</string>
    <string name="more_games_description">Play other exciting games!</string>
    <string name="more_games_button">More Games</string>
    <string name="internet_not_available">Internet connection required</string>
    <string name="openfeint_not_logged_in">OpenFeint log in required</string>
    <string name="alawar_subscriber_title">Alawar Newsletter</string>
    <string name="alawar_subscriber_info">Be the first to hear about our new Android games, receive exclusive offers, and enjoy special promotions, game previews, contests, and more. Sign up for the Alawar Newsletter today!</string>
    <string name="alawar_subscriber_privacy">By providing us with your email address, you are agreeing to receive the Alawar Newsletter. Rest assured we\'ll keep your contact information private.</string>
    <string name="alawar_subscriber_subscribe">Subscribe Now!</string>
    <string name="alawar_subscriber_thanks">Thank you for subscribing to the Alawar Newsletter!</string>
    <string name="alawar_subscriber_accepted">We have accepted your subscription.</string>
    <string name="alawar_subscriber_back">Back to menu</string>
    <string name="alawar_subscriber_email_hint">Enter your Email</string>
    <string name="alawar_subscriber_name_hint">Enter your Name</string>
    <string name="alawar_subscriber_wait">Please wait...</string>
    <string name="alawar_subscriber_error_title">Error</string>
    <string name="alawar_subscriber_invalid_email_text">Please enter correct email.</string>
    <string name="alawar_subscriber_request_failed">Unable to subscribe. Please try again.</string>
    <string name="alawar_subscriber_ok">OK</string>
    <string name="buy">Buy</string>
    <string name="select_item">Select an item</string>
    <string name="edit_payload">Edit Payload</string>
    <string name="edit_payload_title">Edit the developer payload associated with this purchase</string>
    <string name="edit_payload_accept">Set</string>
    <string name="edit_payload_clear">No Payload</string>
    <string name="items_for_sale">Items for sale</string>
    <string name="items_you_own">Items you own</string>
    <string name="recent_transactions">Recent activity</string>
    <string name="android_test_canceled">android.test.canceled</string>
    <string name="android_test_purchased">android.test.purchased</string>
    <string name="android_test_item_unavailable">android.test.item unavailable</string>
    <string name="android_test_refunded">android.test.refunded</string>
    <string name="actions">Actions</string>
    <string name="facebook_login">Facebook login</string>
    <string name="twitter_login">Twitter login</string>
    <string name="rewards">Rewards</string>
    <string name="get_reward">Get a reward</string>
    <string name="test_ach">Test Achievement</string>
    <string name="subscription">Subscription</string>
    <string name="openfeint_achievements">OF Achivements</string>
</resources>
