<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/screen_background"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actions"/>
    <TableLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/test_ach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_ach"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/balance_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Balance"/>
            <Button
                android:id="@+id/offerwall_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Offer Wall"/>
            <Button
                android:id="@+id/subscription_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscription"/>
            <Button
                android:id="@+id/get_reward_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewards"/>
            <Button
                android:id="@+id/add_notification_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add notification"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/facebook_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_login"/>
            <Button
                android:id="@+id/twitter_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter_login"/>
            <Button
                android:id="@+id/openfeint_achievements_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openfeint_achievements"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:textColor="@color/error_message"
        android:id="@+id/billing_supported"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/items_for_sale"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"/>
        <Spinner
            android:id="@+id/item_choices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/select_item"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/payload_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_payload"/>
    </LinearLayout>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/items_you_own"/>
    <ListView
        android:id="@+id/owned_items"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recent_transactions"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:bufferType="spannable"/>
    </ScrollView>
</LinearLayout>
