<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="@dimen/get_reward_row_width"
        android:layout_height="@dimen/get_reward_row_height">
        <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_width="@dimen/reward_tab_description_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <TextView
                android:textSize="@dimen/rewards_button_title_size"
                android:textStyle="bold"
                android:textColor="@color/rewards_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newsletter_subscription"/>
            <TextView
                android:textSize="@dimen/rewards_button_description_size"
                android:textColor="@color/rewards_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newsletter_subscription_description"/>
        </LinearLayout>
        <Button
            android:id="@+id/newsletter_subscription_button"
            android:layout_width="@dimen/get_reward_button_width"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/get_reward_button_margin_right"
            android:text="@string/newsletter_subscription_button"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="@dimen/get_reward_row_width"
        android:layout_height="@dimen/get_reward_row_height">
        <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_width="@dimen/reward_tab_description_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <TextView
                android:textSize="@dimen/rewards_button_title_size"
                android:textStyle="bold"
                android:textColor="@color/rewards_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_games"/>
            <TextView
                android:textSize="@dimen/rewards_button_description_size"
                android:textColor="@color/rewards_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_games_description"/>
        </LinearLayout>
        <Button
            android:id="@+id/more_games_button"
            android:layout_width="@dimen/get_reward_button_width"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/get_reward_button_margin_right"
            android:text="@string/more_games_button"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</LinearLayout>
