<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/share_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:textSize="@dimen/share_title_size"
            android:textStyle="bold"
            android:textColor="@color/share_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_with_friends_title_cap"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:textSize="@dimen/share_text_size"
            android:textStyle="bold"
            android:textColor="@color/share_text"
            android:id="@+id/share_with_friends_text"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_with_friends_text"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/share_with_friends_facebook"
                android:paddingLeft="10dp"
                android:layout_width="@dimen/share_button_width"
                android:layout_height="wrap_content"
                android:text="@string/facebook_button"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
            <Button
                android:id="@+id/share_with_friends_twitter"
                android:paddingLeft="10dp"
                android:layout_width="@dimen/share_button_width"
                android:layout_height="wrap_content"
                android:text="@string/twitter_button"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
