<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/backgr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_gravity="center"
        android:background="@drawable/top"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="0dp">
        <ImageButton
            android:layout_gravity="center"
            android:id="@+id/alawar_subscriber_BackButton"
            android:background="@drawable/button_close"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_marginBottom="2dp"/>
        <TextView
            android:textSize="20sp"
            android:typeface="normal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alawar_subscriber_title"/>
    </FrameLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_gravity="left"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:src="@drawable/left_border"
            android:scaleType="fitXY"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp">
                <TextView
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:textStyle="normal"
                    android:textColor="@color/dark_grey"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/alawar_subscriber_InfoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:text="@string/alawar_subscriber_info"/>
                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/alawar_subscriber_SubscribeLayout"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/alawar_subscriber_NameEditText"
                        android:nextFocusUp="@+id/alawar_subscriber_BackButton"
                        android:nextFocusDown="@+id/alawar_subscriber_EmailEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="200dp"
                        android:hint="@string/alawar_subscriber_name_hint"
                        android:lines="1"
                        android:inputType="textPersonName"
                        android:imeOptions="actionNext"
                        android:imeActionLabel="Next"
                        android:imeActionId="5"/>
                    <EditText
                        android:ellipsize="end"
                        android:id="@+id/alawar_subscriber_EmailEditText"
                        android:nextFocusUp="@+id/alawar_subscriber_NameEditText"
                        android:nextFocusDown="@+id/alawar_subscriber_SubscribeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="200dp"
                        android:hint="@string/alawar_subscriber_email_hint"
                        android:lines="1"
                        android:layout_below="@+id/alawar_subscriber_NameEditText"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionGo"
                        android:imeActionId="2"/>
                    <Button
                        android:textSize="14sp"
                        android:typeface="normal"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/alawar_subscriber_SubscribeButton"
                        android:background="@drawable/button_subscribe"
                        android:nextFocusUp="@+id/alawar_subscriber_EmailEditText"
                        android:nextFocusDown="@+id/alawar_subscriber_BackButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="140dp"
                        android:minHeight="30dp"
                        android:text="@string/alawar_subscriber_subscribe"
                        android:imeOptions="actionGo"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/alawar_subscriber_ThankLayout"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="14sp"
                        android:typeface="normal"
                        android:textColor="@color/dark_grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alawar_subscriber_thanks"/>
                    <TextView
                        android:textSize="14sp"
                        android:typeface="normal"
                        android:textColor="@color/dark_grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/alawar_subscriber_accepted"/>
                    <Button
                        android:textSize="14sp"
                        android:typeface="normal"
                        android:textStyle="bold"
                        android:textColor="#ffffff"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/alawar_subscriber_ThankButton"
                        android:background="@drawable/button_backtomenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:minWidth="140dp"
                        android:minHeight="30dp"
                        android:text="@string/alawar_subscriber_back"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/border"
                    android:scaleType="fitXY"/>
                <TextView
                    android:textSize="11sp"
                    android:typeface="normal"
                    android:textColor="@color/dark_grey"
                    android:autoLink="none"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/alawar_subscriber_PrivacyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:minHeight="0dp"
                    android:text="@string/alawar_subscriber_privacy"
                    android:layout_alignParentBottom="true"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
